<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_random_description">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">WOLOX</string>
    <string name="example_wolox_phone">0800 123 4567</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="view_pager_title">Username: %1$s\nFavourite color: %2$s</string>
    <string name="random_toolbar_title">Random number example</string>
    <string name="request_toolbar_title">Example Request</string>
    <string name="fragment_example_username">Username</string>
    <string name="fragment_example_favourite_color">Your favourite color</string>
    <string name="fragment_example_login">Login</string>
	<string name="fragment_request_search">Search</string>
    <string name="fragment_request_post_id">Post id</string>
    <string name="fragment_request_invalid_input">Invalid input, please enter a valid id.</string>

</resources>